Adding song data to view.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -64,7 +64,7 @@
                 <div id='play' class="row">
                     <div class='wrapper text-center col'>
                         <div class="btn-group">
-                            <button id="getNextSong" type="button" class="btn btn-primary btn-lg" onclick="addUserResponse(this)" value="Play Next Song">Play Next Song
+                            <button id="getNextSong" type="button" class="btn btn-primary btn-lg" onclick="userClickedPlayNextSong(this)" value="Play Next Song">Play Next Song
                                 <span class="glyphicon glyphicon-step-forward"></span>
                             </button>
                             <button id="getNextShow" type="button" class="btn btn-primary btn-lg" onclick="addUserResponse(this)" value="Play Next Show">Play Next Show
