Added Default Servlets with static bot responses.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -98,7 +98,7 @@
                             <button id="noComment" type="button"  class="btn btn-primary pull-right" onclick="addUserResponse(this)" value="I got nothing to say">
                                 I got nothing to say
                             </button>
-                            <button id="songComment" type="button" class="btn btn-primary pull-right" onclick="submitUserComment()">
+                            <button id="songComment" type="button" class="btn btn-primary pull-right" onclick="submitUserComment(this)">
                                 Submit <span class="glyphicon glyphicon-comment pull-right"></span>
                             </button>
                         </div>
