--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -7,7 +7,7 @@
         <meta name="author" content="">
         <!-- <meta http-equiv="refresh" content="2"> -->
         <link rel="shortcut icon" href="favicon.png">
-        
+
         <title>moe.bot</title>
         <!-- Bootstrap core CSS -->
         <link href="./css/bootstrap.css" rel="stylesheet">
@@ -15,6 +15,9 @@
         <link href="./css/glyphicons.css" rel="stylesheet" />
         <!-- Custom styles for this template -->
         <link href="./css/my.css" rel="stylesheet">
+        <!-- Link to Rating js file -->
+        <link rel="stylesheet" href="./css/rating_stars/rating.css">
+
     </head>
 
     <body>
@@ -116,6 +119,6 @@
         <script src="./js/tether.min.js"></script>
         <script src="./js/bootstrap.min.js"></script>
         <script src="./js/myscripts.js"></script>
-
+        <script src="./js/rating.js"></script>
     </body>
 </html>
